# python-console-math-games

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions.yml
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
