[tool.poetry]
name = "first-project"
version = "0.1.0"
description = ""
authors = ["Olga <ol.nevskaya@mail.ru>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.Brain_games:main"
brain-calc = "brain_games.scripts.brain_calc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
